--- a/includes/acknowledgments.tex
+++ b/includes/acknowledgments.tex
@@ -3,4 +3,6 @@
 I would like to thank Christophe Godin for the time he spent
 supervising and helping me, as well as him and Romain Azais for the
 many discussions we had together about NP-completeness and Self-nestd
-trees.
+trees. I also would like to thank Frédéric Vivien, who helped me to
+work on the first approach and gave me numerous advices on the way of
+approaching a problem of NP-completness. 
