--- a/rapport.tex
+++ b/rapport.tex
@@ -32,6 +32,8 @@
 \usepackage{tikz-qtree}
 \usepackage{forest}
 
+\usepackage{xspace}
+
 \usetikzlibrary{shapes}
 \usetikzlibrary{calc}
 
@@ -115,7 +117,7 @@
 \input{includes/introduction.tex}
 \input{includes/context.tex}
 \input{includes/contribution.tex}
-\input{includes/validation.tex}
+% \input{includes/validation.tex}
 \input{includes/conclusion.tex}
 
 %\input{includes/sujet.tex}
